--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "w": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
   "dependencies": {
     "acorn-jsx": "^5.3.2",
     "astring": "^1.7.5",
-    "estree-util-build-jsx": "^2.0.0"
+    "estree-util-build-jsx": "^2.0.0",
+    "hyperscript": "^2.0.2"
   }
 }
