--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "dependencies": {
     "acorn-jsx": "^5.3.2",
     "astring": "^1.7.5",
+    "diff-dom": "^4.2.2",
     "estree-util-build-jsx": "^2.0.0",
-    "hyperscript": "^2.0.2"
+    "hyperscript": "^2.0.2",
+    "incremental-dom": "^0.7.0",
+    "incremental-hyperscript": "^0.1.1"
   }
 }
